Replace WebView from core with react-native-webview
Due to the fact that WebView is about to leave React Native Core and was already move to a separate repository (see: https://github.com/react-native-community/react-native-webview), I have updated the import and added dependency.

More on the 'lean core' initiative:
https://github.com/facebook/react-native/issues/23313

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/scazzy/react-native-webview-autoheight/issues"
   },
-  "homepage": "https://github.com/scazzy/react-native-webview-autoheight#readme"
+  "homepage": "https://github.com/scazzy/react-native-webview-autoheight#readme",
+  "dependencies": {
+    "react-native-webview": "^5.7.1"
+  }
 }
