--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "height"
   ],
   "peerDependencies": {
-    "react-native-webview": "^5.9.1"
+    "react": ">= 16.8.0",
+    "react-native": ">= 0.60.0",
+    "react-native-webview": ">= 10.9.0"
   },
   "author": "Elton Jain",
   "license": "ISC",
